updated placeInTable pieces

--- a/connect4.css
+++ b/connect4.css
@@ -11,10 +11,18 @@
 .piece {
   /* TODO: make into circles */
   margin: 5px;
+  border-radius: 50%;
   width: 80%;
   height: 80%;
 }
 
+.p1{
+  background-color:red;
+}
+
+.p2{
+  background-color:blue;
+}
 /* TODO: make pieces red/blue,  depending on player 1/2 piece */
 
 /* column-top is table row of clickable areas for each column */
