--- a/connect4.css
+++ b/connect4.css
@@ -1,5 +1,13 @@
 /* game board table */
 
+h1,h2,h3 {
+  text-align: center; 
+  font-family: 'Londrina Solid', cursive;
+}
+#board{
+  margin: auto;
+  border: 3px double blue;
+}
 #board td {
   width: 50px;
   height: 50px;
@@ -34,3 +42,5 @@
 #column-top td:hover {
   background-color: gold;
 }
+
+
